[project]
name = "lg-foundations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.6.0",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-tavily>=0.2.12",
    "langgraph>=0.6.10",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "matplotlib>=3.10.7",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "tk>=0.1.0",
    "typing-extensions>=4.15.0",
    "wikipedia>=1.4.0",
]
